--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -8,6 +8,7 @@
 :root{
   --green: #79b044;
   --salmon: #dd5638;
+  --salmonHover: #C82333;
   --blueGray: #3e4249;
 }
 
@@ -53,8 +54,7 @@ a:link, a:active{
 }
 a:hover{
   color: #c9302c;
-  text-decoration: underline;
-  font-weight: bold;
+  text-decoration: none;
 }
 
 section{
@@ -64,6 +64,33 @@ section h3{
   margin: 30px 0 10px;
 }
 
+#primary{
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.feature-img{
+  width: 100%;
+  text-align: center;
+}
+.feature-img-default{
+  background: url('../img/stuff-feature.jpg') no-repeat;
+  background-size: cover;
+}
+.feature-img-default-alt{
+  background: url('../img/hipster-stuff.jpg') no-repeat;
+  background-size: cover;
+}
+.feature-img h1{
+  color: white;
+}
+
+a{
+  color: var(--salmon);
+}
+a:hover{
+  color: var(--salmonHover);
+}
 .btn, a.btn, button, input{
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -246,6 +273,122 @@ div.modal small{
   font-size: 70%;
 }
 
+
+
+
+/*Blog*/
+.post, .widget, #comments{
+  position: relative;
+  border: 1px solid #ddd;
+  background: white;
+  margin: 0 0 40px;
+  border-radius: 4px;
+}
+.post header,
+.post .post-excerpt,
+.post .post-body,
+#comments .comments-wrap {
+  padding: 20px;
+}
+
+.post header h3,
+.post header h1{
+  margin: 0 0 15px;
+  padding: 0 0 15px;
+  border-bottom: solid 1px #ddd;
+}
+.post header h1{
+  font-size: 24px;
+}
+.post-image{
+  height: auto;
+}
+.post-details{
+  font-size: 12px;
+  width: 90%;
+}
+.post-details span.fa{
+  padding-left: 10px;
+}
+.post-details span.fa:first-child{
+  padding: 0;
+}
+
+/*Widgets*/
+.widget{
+  padding: 20px;
+}
+.widget h4{
+  margin: 0 0 10px;
+  padding: 0 0 10px;
+  border-bottom: solid 1px #ddd;
+}
+.widget ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.widget ul li{
+  margin: 0 0 5px;
+}
+.widget ul li:hover{
+  position: relative;
+  left: 1px;
+}
+
+/*Comments*/
+.post-comment-badge{
+  height: 70px;
+  width: 70px;
+  position: absolute;
+  top: 25px;
+  right: 20px;
+  border: none;
+  border-radius: 100%;
+  background: var(--green);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.post-comment-badge a{
+  color: white;
+  font-size: 20px;
+  text-decoration: none;
+}
+.post-comment-badge i.fa{
+  display: block;
+  font-size: 15px;
+  padding: 0;
+  margin-bottom: 4px;
+}
+.post-comment-badge:hover{
+  background-color: #8bc653;
+}
+label{
+  display: block;
+  font-weight: bold;
+}
+#comments img{
+  width: 50px;
+}
+#comments h3{
+  text-align: center;
+}
+#comments h4{
+  font-size: 1.4em;
+}
+#comments .media{
+  background-color: rgba(0,0,0,0.02);
+  padding: 10px 20px;
+  margin: 10px 0;
+  border-radius: 4px;
+  border: solid 1px rgba(0,0,0,0,0.03);
+}
+#leave-comment{
+  margin: 40px 0 0;
+  padding: 20px 0 0;
+  border-top: solid 1px #eee;
+}
 /*Media Queries*/
 @media screen and (max-width: 991px){
   #instructor .container{
